# lustreparallelread

./: .gitignore  Makefile.am  README  README.md  configure.ac  liblustreparallelread.pc.in
src/: Makefile.am
src/liblustreparallelread/: liblustreparallelread_getstripeinfo.c  liblustreparallelread_getstripeinfo.h  liblustreparallelread_readfilepart.c  liblustreparallelread_readfilepart.h
src/programs/: parcat.c  testrandomread.c
